Fixed API responses and views on pages